Finalización de la clase semana #11 + se terminaron las vistas de categorías y artículos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ aplicacion.titulo=TechShop
 plantilla.clientes=Clientes
 plantilla.categorias=Categor\u00edas
 plantilla.articulos=Art\u00edculos
-plantilla.derechos=Derechos Reservados 2022
+plantilla.derechos=Derechos Reservados 2023
 
 index.titulo=Nuestros Art\u00edculos
 
@@ -49,3 +49,26 @@ cliente.buscar=Ingrese nombre y apellido del cliente
 accion.buscar=Buscar
 cliente.no_encontrado=Cliente no encontrado...
 cliente.resultado=-Resultado de la busqueda-
+
+
+plantilla.tusuario=Usuario
+plantilla.troles=Roles
+plantilla.usuarios=Usuarios
+plantilla.bienvenido=Usuario
+plantilla.titulo=Su tienda en l\u00ednea
+plantilla.logout=Logout
+cliente.limiteTotal=L\u00edmite Total
+cliente.totalClientes=Total de clientes
+articulo.inventario=Inventario Total
+articulo.totalArticulos=Total de Art\u00edculos
+categoria.totalCategorias=Total de Categorias
+
+login.username=Usuario
+login.password=Contrase\u00f1a
+login.login=Autenticar
+e403.titulo=Acceso denegado
+e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
+plantilla.tusuario=Usuario
+plantilla.troles=Roles
+plantilla.logout=Salir
+plantilla.admin=Admin
