--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,7 +3,7 @@ aplicacion.titulo=TechShop
 plantilla.clientes=Clients
 plantilla.categorias=Categories
 plantilla.articulos=Articles
-plantilla.derechos=All Rights Reserved 2022
+plantilla.derechos=All Rights Reserved 2023
 
 index.titulo=Our Articles
 
@@ -49,3 +49,27 @@ cliente.buscar=Enter the first and last name of the customer
 accion.buscar=Search
 cliente.no_encontrado=Customer not found...
 cliente.resultado=-search result-
+
+plantilla.tusuario=User
+plantilla.troles=Rol
+plantilla.usuarios=Users
+plantilla.bienvenido=User
+plantilla.titulo=Your online shop
+plantilla.logout=Logout
+cliente.limiteTotal=\nTotal Limit
+cliente.totalClientes=Total Custumers
+articulo.inventario=Total Inventory\n
+articulo.totalArticulos=Total Articles
+categoria.totalCategorias=Total Categories
+
+login.username=User
+login.password=Password
+login.login=Login
+ 
+e403.titulo=Access Denied
+e403.texto=You don't have access to this resource
+ 
+plantilla.tusuario=User
+plantilla.troles=Roles
+plantilla.logout=Logout
+plantilla.admin=Admin
