Finalización de la clase semana #13

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,3 +72,9 @@ plantilla.tusuario=Usuario
 plantilla.troles=Roles
 plantilla.logout=Salir
 plantilla.admin=Admin
+
+carrito.regresar=Continuar comprando
+carrito.carrito=Carrito de compras
+carrito.cantidadArticulos=articulos en el carrito
+carrito.resumen=Resumen de la compra
+
