--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -74,3 +74,8 @@ plantilla.tusuario=Usuario
 plantilla.troles=Roles
 plantilla.logout=Salir
 plantilla.admin=Admin
+
+carrito.regresar=Continuar comprando
+carrito.carrito=Carrito de compras
+carrito.cantidadArticulos=articulos en el carrito
+carrito.resumen=Resumen de la compra
